<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scrollView2" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:background="@drawable/ly_bord_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
                <RadioGroup android:id="@id/rd" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <RadioButton android:textColor="#ff454344" android:gravity="center|right" android:layout_gravity="right" android:id="@id/radio_pish" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/FontSampleDefault" />
                    <RadioButton android:textColor="#ff454344" android:gravity="center|right" android:layout_gravity="right" android:id="@id/radio_01" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/FontSample01" />
                    <RadioButton android:textColor="#ff454344" android:gravity="center|right" android:layout_gravity="right" android:id="@id/radio_02" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/FontSample02" />
                    <RadioButton android:textColor="#ff454344" android:gravity="center|right" android:layout_gravity="right" android:id="@id/radio_03" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/FontSample03" />
                    <RadioButton android:textColor="#ff454344" android:gravity="center|right" android:layout_gravity="right" android:id="@id/radio_04" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/FontSample04" />
                    <RadioButton android:textColor="#ff454344" android:gravity="center|right" android:layout_gravity="right" android:id="@id/radio_05" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/FontSample05" />
                    <RadioButton android:textColor="#ff454344" android:gravity="center|right" android:layout_gravity="right" android:id="@id/radio_06" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/FontSample06" />
                    <RadioButton android:textColor="#ff454344" android:gravity="center|right" android:layout_gravity="right" android:id="@id/radio_07" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/FontSample07" />
                    <RadioButton android:textColor="#ff454344" android:gravity="center|right" android:layout_gravity="right" android:id="@id/radio_08" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/FontSample08" />
                    <RadioButton android:textColor="#ff454344" android:gravity="center|right" android:layout_gravity="right" android:id="@id/radio_09" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/FontSample09" />
                    <RadioButton android:textColor="#ff454344" android:gravity="center|right" android:layout_gravity="right" android:id="@id/radio_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/FontSample10" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>